@@ -148,6 +148,15 @@ AT_CHECK([GREP -q "StoredKnowledge: deleted 1024 objects" stderr])
 AT_KEYWORDS(infrastructure)
 AT_CLEANUP
 
+AT_SETUP([Determining runtime and allocated memory])
+AT_CHECK_LOLA
+AT_CHECK([cp TESTFILES/PO.owfn .])
+AT_CHECK([WENDY PO.owfn --verbose --stats],0,ignore,stderr)
+AT_CHECK([GREP -q "runtime" stderr])
+AT_CHECK([GREP -q "memory consumption" stderr])
+AT_KEYWORDS(infrastructure)
+AT_CLEANUP
+
 
 ############################################################################
 AT_BANNER([Errors])
