@@ -1,3 +1,3 @@
 #!/bin/sh
 
-if test -f $1; then $*; else exit 77; fi
+if test -f $1; then eval $*; else exit 77; fi
